<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="no_data">没有找到符合条件的信息</string>
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>
    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在加载中…</string>
    <string name="retry_large_image"><u>加载失败，点击重试</u></string>
    <string name="app_name">安卓通讯录</string>
    <string name="hello_world">Hello world!</string>
    <string name="input_username">请输入用户名</string>
    <string name="password">密码</string>
    <string name="copyright">copyright@</string>
    <string name="login">登录</string>
    <string name="pj">自我评价总结</string>
    <string name="reg">注册</string>
    <string name="action_settings">Settings</string>
    <string name="answerTitle">答案选项：</string>
    <string name="descript">广东海洋大学CFuture团队桥下一粒砂（chenyoca）作品</string>

    <!-- 上下文菜单选项文字 -->
    <string name="contextView">查看成绩</string>
    <string name="contextRestart">重新考试</string>
    <string name="contextClean">清除记录</string>
    <string name="contextDelete">删除考卷</string>
    <string name="sethost">设置服务器地址</string>

    <!-- 上下文菜单的序号 -->
    <integer name="contextViewIndex">1</integer>
    <integer name="contextRestartIndex">2</integer>
    <integer name="contextCleanIndex">3</integer>
    <integer name="contextDeleteIndex">4</integer>
    <!-- 选项菜单文字 -->
    <string name="optionAdd">添加考卷</string>
    <string name="optionAds">精彩推荐</string>
    <string name="optionAbout">关于帮助</string>
    <string name="optionExit">退出程序</string>

    <!-- 选项菜单序号 -->
    <integer name="optionAddIndex">1</integer>
    <integer name="optionAdsIndex">2</integer>
    <integer name="optionAboutIndex">3</integer>
    <integer name="optionExitIndex">4</integer>

    <string name="titleTag">考卷：%1$s</string>
    <string name="infoTotalTimeTag">时间：</string>
    <string name="infoTotalScoreTag">总分：</string>
    <string name="infoElapsedTimeTag">用时：</string>
    <string name="testProcessTag">进度：</string>
    <string name="submitAnswer">答题</string>
    <string name="subjectIndex">第&#160;%1$s&#160;题：    </string>
    <string name="answerAnalysisTitle">答案解析：</string>
    <string name="profileInfo">时间：%1$d&#160;&#160;&#160;&#160;总分：%2$d&#160;&#160;&#160;&#160;用时：%3$s:%4$s</string>
    <string name="profileTitle">考卷：%1$s</string>
    <string name="profileNotSubject">此题目不存在！</string>
    <string name="listAuthor">创建者：%1$s</string>

    <!-- 考试过程中点击返回键显示提示框的内容 -->
    <string name="exitTitle">党员考试退出提示</string>
    <string name="duplicatNameTitle">文件重名提示</string>
    <string name="downloadTitle">安卓考试下载提示</string>
    <string name="buttonOverWriteOK">确定覆盖</string>
    <string name="buttonOK">确定</string>
    <string name="buttonCancle">取消</string>
    <string name="exitTip">你正在考试，返回主界面吗?</string>
    <string name="fileExistsTip">发现相同的文件已经存在，你无论如何也要下载吗？</string>
  	<string name="unfinishedTip">您有未完成的题目，确认交卷？</string>
    <integer name="subjectContentMaxLength">120</integer>
    <integer name="subjectContentNormalFont">20</integer>
    <integer name="subjectContentSmallFont">18</integer>
    <integer name="answerContentMaxLength">50</integer>
    <integer name="answerContentNormalFont">20</integer>
    <integer name="answerContentSmallFont">18</integer>

    <string name="xmlEmptyError">本机不存在考卷，请连接网络下载考卷...</string>
    <string name="parseError">SAX引擎解析XML文件失败，可能文件已经被破坏！</string>
    <string name="parseSingleError">考卷目录某个考卷文件被破坏！</string>
    <string name="noWIFI">你的WIFI未开启!请打开Wifi后重试。</string>
    <string name="xmlLoadingTip">正从服务端加载数据...</string>
    <string name="xmlLoadingTitle">网络连接</string>
    <string name="dlDownloadingTip">正在下载[ %1$s ]...</string>
    <string name="dlFileExistsError">文件已经存在，不需要重复下载。</string>
    <string name="dlInputEmptyError">无法获取文件!</string>
    <string name="dlConnectError">网络异常！请检查网络连接是否正常!</string>
    <string name="dlClientError">网络通讯异常!</string>
    <string name="dlNoList">无法获取文件列表！</string>
    <string name="dlCompleteTip">下载完成！</string>
    <string name="savehost">保存</string>
    <string name="begin">开始答题</string>
    <string name="examifno">此版块为测试党员相关知识的试题版块，题目由系统随机出题，共10道题，每题10分，共一百分，请仔细阅读试题在进行作答，确认答题请点击开始答题按钮进行答题。</string>

</resources>